<resources>
    <string name="app_name">BananaPorts</string>
    <string name="app_logo">APPLogo</string>
    <string name="app_version">Version 2.2</string>
    <string name="power_by">Powered by  </string>
    <string name="banana_team">Bananas Team</string>

    <string name="home_toolbar">BananaPorts</string>
    <string name="text_home_bar_bluetooth">Bluetooth</string>
    <string name="text_home_bar_wifi">Wifi</string>
    <string name="text_home_bar_ports">Multi-port</string>
    <string name="text_home_bar_about">About</string>

    <string name="home_bluetooth_isOn">Bluetooth State</string>
    <string name="home_wifi_isOn">Wifi State</string>
    <string name="home_isDiscovering">Discovering</string>
    <string name="home_button_switch_on">Turn on BlueTooth</string>
    <string name="fragment_button_wifi_switch_on">Connect</string>
    <string name="home_button_switch_off">Turn off</string>
    <string name="home_button_discover">Discover</string>
    <string name="home_button_discover_ing">Stop</string>
    <string name="home_listview_listview">Devices Found</string>
    <string name="fragment_wifi_isConnected">SSID</string>
    <string name="fragment_button_wifi_switch_off">Disconnect</string>
    <string name="fragment_text_wifi_text">Via Data</string>
    <string name="fragment_wifi_ip">IP Address</string>
    <string name="fragment_wifi_port">port</string>
    <string name="fragment_wifi_updateInfo">Update</string>
    <string name="fragment_wifi_connect">Connect</string>
    <string name="fragment_wifi_connect_statue">connection</string>
    <string name="about_opensource_license">Open-Source License</string>
    <string name="about_privacy_policy">Privacy Policy</string>
    <string name="about_github">Open-Source Address</string>
    <string name="string_save">Save</string>
    <string name="string_send">Send</string>
    <string name="string_num">01</string>
    <string name="string_ip">192.168.4.1</string>
    <string name="string_port">8081</string>
    <string name="main_dialog_policy">Policy</string>
    <string name="main_dialog_message">You can only use the application after you read and commit our using-ploicy and privacy-policy. If you does not agree, please exit.</string>
    <string name="main_dialog_user_policy">Using Policy</string>
    <string name="main_dialog_agree">Agreed</string>
    <string name="main_dialog_exit">Exit</string>
    <string name="about_user_policy">User Policy</string>
    <string name="bluetooth_name">Name</string>
    <string name="bluetooth_mac">Address</string>
    <string name="port_start_send">Start</string>
    <string name="port_stop_send">Stop</string>

</resources>