<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!-- App Information -->
    <LinearLayout
        android:layout_marginTop="80dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="18"
        android:orientation="vertical"
        android:layout_gravity="top">
        <ImageView
            android:src="@mipmap/ic_launcher"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:contentDescription="@string/app_logo" />
        <TextView
            android:text="@string/app_name"
            android:textSize="18sp"
            android:textColor="@color/blue_dai2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"/>
        <TextView
            android:text="@string/app_version"
            android:textSize="14sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="vertical"
        android:gravity="bottom">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="18dp">
            <TextView
                android:text="@string/power_by"
                android:textColor="@color/blue_dai"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="7"
                android:gravity="center|end"/>
            <TextView
                android:text="@string/banana_team"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:gravity="center|start"/>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>