<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="0.50"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        style="@style/Widget.MaterialComponents.TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/home_wifi_isOn"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline5"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/fragment_wifi_state"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home_wifi_isOn"
        android:textColor="#00838F"
        app:layout_constraintBottom_toBottomOf="@+id/textView4"
        app:layout_constraintEnd_toStartOf="@+id/guideline5"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toTopOf="@+id/textView4" />

    <View
        android:id="@+id/divider3"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:layout_constraintVertical_bias="0.036" />

    <TextView
        android:id="@+id/textView8"
        style="@style/Widget.MaterialComponents.TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:text="@string/fragment_wifi_ip"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/divider3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline5"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView9"
        style="@style/Widget.MaterialComponents.TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fragment_wifi_port"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/divider3"
        app:layout_constraintEnd_toEndOf="@+id/textView8"
        app:layout_constraintStart_toStartOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <TextView
        android:id="@+id/fragment_wifi_instantIP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fragment_wifi_ip"
        android:textColor="@color/blue_dai2"
        app:layout_constraintBottom_toBottomOf="@+id/textView8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView8"
        app:layout_constraintTop_toTopOf="@+id/textView8" />

    <TextView
        android:id="@+id/fragment_wifi_instantPort"
        style="@style/Widget.MaterialComponents.TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fragment_wifi_port"
        android:textColor="@color/blue_dai2"
        app:layout_constraintBottom_toBottomOf="@+id/textView9"
        app:layout_constraintEnd_toEndOf="@+id/fragment_wifi_instantIP"
        app:layout_constraintStart_toStartOf="@+id/fragment_wifi_instantIP"
        app:layout_constraintTop_toTopOf="@+id/textView9" />

    <Button
        android:id="@+id/wifi_submit_button"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/fragment_wifi_updateInfo"
        android:textAllCaps="false"
        android:textColor="#1976D2"
        app:layout_constraintBottom_toBottomOf="@+id/textView5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/fragment_wifi_edit_ip"
        app:layout_constraintTop_toTopOf="@+id/fragment_wifi_edit_ip" />

    <View
        android:id="@+id/divider4"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/fragment_wifi_connect_statue"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline5"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider4"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/fragment_wifi_connectStatue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fragment_wifi_connect_statue"
        android:textColor="#1976D2"
        app:layout_constraintBottom_toBottomOf="@+id/textView17"
        app:layout_constraintEnd_toStartOf="@+id/guideline5"
        app:layout_constraintStart_toEndOf="@+id/textView17"
        app:layout_constraintTop_toTopOf="@+id/textView17" />

    <Button
        android:id="@+id/fragment_wifi_connectDevice"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/fragment_wifi_connect"
        android:textAllCaps="false"
        android:textColor="#1976D2"
        app:layout_constraintBottom_toBottomOf="@+id/fragment_wifi_connectStatue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline5"
        app:layout_constraintTop_toTopOf="@+id/fragment_wifi_connectStatue" />

    <View
        android:id="@+id/divider6"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView17"
        app:layout_constraintVertical_bias="0.055" />

    <EditText
        android:id="@+id/wifi_edit_data01"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="number"
        android:minHeight="48dp"
        android:text="@string/string_num"
        android:textColor="@color/pile_black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider6"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="DuplicateSpeakableTextCheck,LabelFor" />

    <EditText
        android:id="@+id/wifi_edit_data02"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints="@string/string_num"
        android:ems="10"
        android:inputType="number"
        android:minHeight="48dp"
        android:text="@string/string_num"
        android:textColor="@color/pile_black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/wifi_edit_data01"
        app:layout_constraintStart_toStartOf="@+id/wifi_edit_data01"
        app:layout_constraintTop_toBottomOf="@+id/wifi_edit_data01"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/wifi_edit_data03"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints="@string/string_num"
        android:ems="10"
        android:inputType="number"
        android:minHeight="48dp"
        android:text="@string/string_num"
        android:textColor="@color/pile_black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/wifi_edit_data02"
        app:layout_constraintStart_toStartOf="@+id/wifi_edit_data02"
        app:layout_constraintTop_toBottomOf="@+id/wifi_edit_data02"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/wifi_text_data_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/fragment_wifi_ip"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline5"
        app:layout_constraintTop_toBottomOf="@+id/divider6"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/wifi_button_data_save"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/string_save"
        android:textAllCaps="false"
        android:textColor="#1976D2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/fragment_wifi_connectDevice"
        app:layout_constraintStart_toStartOf="@+id/fragment_wifi_connectDevice"
        app:layout_constraintTop_toBottomOf="@+id/wifi_text_data_view"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/wifi_button_data_send"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/string_send"
        android:textAllCaps="false"
        android:textColor="#1976D2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/wifi_button_data_save"
        app:layout_constraintStart_toStartOf="@+id/wifi_button_data_save"
        app:layout_constraintTop_toBottomOf="@+id/wifi_button_data_save"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/fragment_wifi_ip"
        android:textSize="16sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline5"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider3"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/fragment_wifi_port"
        android:textSize="16sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textView3"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/fragment_wifi_edit_ip"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="64dp"
        android:autofillHints="@string/string_num"
        android:ems="10"
        android:inputType="text"
        android:minHeight="48dp"
        android:text="@string/string_ip"
        android:textColor="@color/pile_black"
        app:layout_constraintBottom_toBottomOf="@+id/textView3"
        app:layout_constraintEnd_toStartOf="@+id/guideline7"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toTopOf="@+id/textView3"
        tools:ignore="DuplicateSpeakableTextCheck,LabelFor" />

    <EditText
        android:id="@+id/fragment_wifi_edit_port"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints="@string/string_num"
        android:ems="10"
        android:inputType="number"
        android:minHeight="48dp"
        android:text="@string/string_port"
        android:textColor="@color/pile_black"
        app:layout_constraintBottom_toBottomOf="@+id/textView5"
        app:layout_constraintEnd_toEndOf="@+id/fragment_wifi_edit_ip"
        app:layout_constraintStart_toStartOf="@+id/fragment_wifi_edit_ip"
        app:layout_constraintTop_toTopOf="@+id/textView5"
        tools:ignore="DuplicateSpeakableTextCheck,LabelFor" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="0.75"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>